CollectionController added, two option on memory pictures. Clean code.